--- a/Primer Parcial/css/main.css
+++ b/Primer Parcial/css/main.css
@@ -29,6 +29,7 @@ body {
 
 .hide-mobile {
     display: none;
+    
 }
 
 p{
@@ -76,24 +77,32 @@ p{
     color: #D7DEE6;
 
 }
-
+/*Arreglando flecha */
+a.hide-mobile.show-desktop{
+    margin-top: -1em;
+    margin-bottom: 0.5em;
+    justify-content: center;
+    font-size: 8em;
+    color:#0AC693
+}
 /* Social links*/
 .social-links{
     list-style: none;
-    padding: 0;
-    margin-top: 3em;
+    padding:0;
+    margin-top:  -5em;
+    margin-bottom:3em;
     display: flex;
     flex-direction: row;
-    justify-content: center
-
+    justify-content:center;    
 }
 
 .social-links li a{
-    color: #D7DEE6;
+    color: rgb(225, 215, 230);
     text-decoration: none;
-    font-size: 2.5em;
+    font-size: 8em;
+    margin-left: 25px;
+ 
 }
-
 
 .green-area {
     background-color: #0AC693; 
