--- a/Primer Parcial/css/main.css
+++ b/Primer Parcial/css/main.css
@@ -17,7 +17,7 @@ body {
     text-align: center;
     font-weight: 400;
 }
-
+/*Cambio el justify content a space-evenly*/
 .header {
     display: flex;
     justify-content: space-evenly;
@@ -68,9 +68,9 @@ p{
 .big-hero img {
     width: 150px;
 }
-
+/*Cambiando letra de h2 y p del big hero*/
 .big-hero h2 {
-    font-size: 1.875em;
+    font-size: 2.5em;
     font-weight: 700;
     letter-spacing: 0.002em;
     margin-top: 1em ;
@@ -135,13 +135,15 @@ a.hide-mobile.show-desktop{
     max-width: 350px;
     margin: 2rem auto;
 }
-
+/*Agrego un margin left de 50px*/
 .post ul li article {
     overflow: hidden;
     border-radius: 10px;
     background-color: #ffffff;
     text-align: left;
     padding-bottom: 2em;
+    width: 270px;
+    margin-left: 50px;
 }
 
 .post article img{
@@ -203,6 +205,7 @@ a.hide-mobile.show-desktop{
     margin-top: 1.5em;
 }
 
+
 .contact-form {
     display: flex;
     flex-direction: column;
@@ -221,8 +224,8 @@ a.hide-mobile.show-desktop{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100px 1fr;
-    margin-top: -3.2em;
-    margin-bottom:3em;
+    margin-top: -3em;
+    margin-bottom:6em;
 }
 
 .bio-info{
@@ -282,9 +285,16 @@ footer{
     background-color: #0D5061;
     color:#D7DEE6;
 }
+/*Agrego cambios para niveler el footer*/
+footer .social-links li {
+    
+    font-size: 20px;
+   
+    margin: -4em 0em -4em;
 
-footer .social-links {
-    margin: 0;
+    padding: 0em 1em;
+
+    
 }
 
 .menu {
@@ -312,6 +322,11 @@ footer .social-links {
     color: white;
     text-decoration: none;
     
+}
+/*Agregano negrita a la parte del form*/
+
+.contact-form label{
+    font-weight: bold;
 }
 
 /* Pesonalizando estilo para tablets*/
@@ -421,4 +436,3 @@ a.hide-mobile.show-desktop{
 .menu li a:hover{
     color: red;
 }
-
